@@ -46,6 +46,7 @@ easier to use. The changes are:
 - showinfo filter
 - split filter
 - libcdio-paranoia input device for audio CD grabbing
+- select filter
 
 
 version 0.7:
